# REDasm-Library

./: .gitmodules  CMakeLists.txt  README.md  lgtm.yml
cmake/: functions.cmake  installdirs.cmake
core/: redasm_api.cpp  redasm_context.cpp  redasm_macros.h  redasm_ui.cpp
core/analyzer/: analyzer.cpp
core/database/: database.h  signaturedb.cpp
core/disassembler/: disassembler.h  disassemblerapi.cpp  disassemblerapi.h
core/emulator/: emulator_alu.h  emulator_base.h  emulator_type.h
core/graph/: functiongraph.h  graph.h
core/plugins/: emulator.cpp  loader.cpp  loader.h  plugins.cpp
core/support/: compression.h  demangler.cpp  demangler.h  hash.h  ordinals.h  serializer.h  symbolize.h  utils.cpp
core/types/: base_types.h
docs/: cparser.py  gendoc.py
impl/: context_impl.cpp  context_impl.h
impl/buffer/: bufferview_impl.cpp  bufferview_impl.h  memorybuffer_impl.cpp  memorybuffer_impl.h
impl/database/: database_impl.cpp  database_impl.h  signaturedb_impl.cpp  signaturedb_impl.h
impl/disassembler/: disassembler_impl.cpp  disassembler_impl.h
impl/graph/: edge_impl.h  functiongraph_impl.cpp  functiongraph_impl.h  graph_impl.cpp  graph_impl.h  node_impl.h  polyline_impl.cpp  polyline_impl.h
impl/libs/: undname.h
impl/lmdb/: lmdb.cpp  lmdb.h  lmdbexception.cpp  lmdbexception.h  lmdbtransaction.cpp  lmdbtransaction.h
impl/plugins/: plugin_impl.cpp  plugin_impl.h  pluginloader.cpp  pluginloader.h  pluginmanager_impl.cpp  pluginmanager_impl.h
impl/support/: compression_impl.cpp  compression_impl.h  demangler_impl.cpp  demangler_impl.h  event_impl.cpp  event_impl.h  hash_impl.cpp  hash_impl.h  ordinals_impl.cpp  ordinals_impl.h  utils_impl.cpp  utils_impl.h
impl/types/: api_impl.cpp  api_impl.h  api_types_impl.cpp  api_types_impl.h  container_impl.h  factory_impl.cpp  factory_impl.h  list_impl.cpp  list_impl.h  regex_impl.cpp  regex_impl.h  string_impl.cpp  string_impl.h  variant_impl.cpp  variant_impl.h
libs/binutils_demangler/: cp-demangle.c
rdapi/: FindREDasm.cmake  assembler.h  buffer.cpp  buffer.h  config.cpp  config.h  context.cpp  context.h  database.cpp  database.h  disassembler.cpp  disassembler.h  events.cpp  events.h  level.h  loader.cpp  loader.h  macros.h  net.cpp  net.h  object.cpp  object.h  plugin.cpp  plugin.h  rdapi.h  rdil.cpp  rdil.h  renderer.cpp  renderer.h  support.cpp  support.h  symbol.cpp  symbol.h  theme.cpp  theme.h  types.cpp  types.h  ui.cpp  ui.h  utils.cpp  (+1 more)
rdapi/database/: database.cpp  database.h  types.cpp  types.h
rdapi/document/: block.cpp  block.h  cursor.cpp  cursor.h  document.cpp  document.h
rdapi/graph/: callgraph.cpp  callgraph.h  functiongraph.cpp  functiongraph.h  graph.cpp  graph.h  layout.cpp  layout.h
rdapi/plugin/: analyzer.cpp  analyzer.h  assembler.cpp  assembler.h  command.cpp  command.h  entry.cpp  entry.h  loader.cpp  loader.h
rdapi/renderer/: renderer.cpp  renderer.h  surface.cpp  surface.h
rdapi/support/: lexer.cpp  lexer.h  utils.cpp  utils.h
rdcore/: config.cpp  config.h  containers.h  context.cpp  context.h  database.cpp  database.h  disassembler.cpp  disassembler.h  eventdispatcher.cpp  eventdispatcher.h  object.cpp  object.h
rdcore/buffer/: abstract.cpp  abstract.h  buffer.cpp  buffer.h  view.cpp  view.h
rdcore/builtin/: builtin.cpp  builtin.h
rdcore/containers/: abstractcontainer.h  addresscontainer.h  basecontainer.h  blockcontainer.h  dictcontainer.h  flatcontainer.h  sortedcontainer.h  treecontainer.h  uniquecontainer.h
rdcore/database/: addressdatabase.cpp  addressdatabase.h  contextstate.cpp  contextstate.h  database.cpp  database.h  databaseitem.cpp  databaseitem.h
rdcore/document/: cursor.cpp  cursor.h  document.cpp  document.h  document_fwd.h  documentdata.cpp  documentdata.h  documentnet.cpp  documentnet.h
rdcore/engine/: analyzer.cpp  analyzer.h  engine.cpp  engine.h  referencetable.cpp  referencetable.h  stringfinder.cpp  stringfinder.h
rdcore/graph/: datagraph.cpp  datagraph.h  graph.cpp  graph.h  styledgraph.cpp  styledgraph.h
rdcore/libs/: undname.h
rdcore/lmdb/: lmdb.cpp  lmdb.h  lmdbexception.cpp  lmdbexception.h  lmdbtransaction.cpp  lmdbtransaction.h
rdcore/mdbx/: mdbx.cpp  mdbx.h  mdbxexception.cpp  mdbxexception.h  mdbxtransaction.cpp  mdbxtransaction.h
rdcore/plugin/: analyzer.cpp  analyzer.h  assembler.cpp  assembler.h  command.cpp  command.h  entry.cpp  entry.h  loader.cpp  loader.h
rdcore/rdil/: expression.cpp  expression.h  expressions.cpp  expressions.h  ilcpu.cpp  ilcpu.h  ilfunction.cpp  ilfunction.h  isa.cpp  isa.h  llfunction.cpp  llfunction.h  rdil.cpp  rdil.h
rdcore/renderer/: cursor.cpp  cursor.h  renderer.cpp  renderer.h  rendereritem.cpp  rendereritem.h  surface.cpp  surface.h  surfacepath.cpp  surfacepath.h
rdcore/serializer/: common.cpp  common.h  reader.cpp  reader.h  writer.cpp  writer.h
rdcore/support/: blockcontainer.h  compression.cpp  compression.h  demangler.cpp  demangler.h  endian.h  error.cpp  error.h  fs.cpp  fs.h  hash.cpp  hash.h  lexer.cpp  lexer.h  safe_ptr.h  sugar.cpp  sugar.h  utils.cpp  utils.h
rdcore/surface/: common.h  cursor.cpp  cursor.h  renderer.cpp  renderer.h  surface.cpp  surface.h  surfacepath.cpp  surfacepath.h  surfacerenderer.cpp  surfacerenderer.h
rdcore/types/: array.cpp  array.h  definitions.cpp  definitions.h  factory.cpp  factory.h  numeric.cpp  numeric.h  string.cpp  string.h  structure.cpp  structure.h  type.cpp  type.h
redasm/: FindREDasm.cmake  context.cpp  context.h  level.h  macros.h  pimpl.h  redasm.cmake  redasm.h  redasm_api.cpp  redasm_api.h  redasm_buffer.cpp  redasm_buffer.h  redasm_context.cpp  redasm_context.h  redasm_endianness.h  redasm_macros.h  redasm_runtime.cpp  redasm_runtime.h  redasm_types.h  redasm_ui.cpp  redasm_ui.h  ui.cpp  ui.h  version.h
redasm/analyzer/: analyzer.cpp  analyzer.h
redasm/buffer/: abstractbuffer.cpp  abstractbuffer.h  bufferview.cpp  bufferview.h  memorybuffer.cpp  memorybuffer.h
tests/: CMakeLists.txt  containertests.cpp  containertests.h  doctest.h  graphtests.cpp  graphtests.h  loadertests.cpp  loadertests.h  main.cpp
(+668 files in other folders)
